Fix TopUp "jumping"

--- a/universal-login-react/src/ui/styles/topUp.sass
+++ b/universal-login-react/src/ui/styles/topUp.sass
@@ -66,7 +66,6 @@
     height: 270px
     transition: height 0.2s linear
 
-
   .top-up-method .top-up-radio-inner
     display: flex
     flex-direction: column
@@ -280,7 +279,7 @@
     display: flex
     align-items: center
     width: 100%
-    height: 30px
+    height: 32px
     border: none
     background: none
     cursor: pointer
@@ -360,7 +359,6 @@
     padding: 0 31px 0 25px
     border-left: 1px solid
 
-
   .amount-dropdown-toggle::after
     content: ''
     position: absolute
@@ -400,13 +398,12 @@
     opacity: 1
     transform: scale(1)
 
-
-  .fiat-payment-method .top-up-radio-inne
+  .fiat-payment-method .top-up-radio-inner
     display: flex
     align-items: center
     justify-content: center
     width: 132px
-    height: 132px
+    height: 97px
 
   .fiat-payment-method + .fiat-payment-method
     margin-left: 24px
@@ -449,7 +446,6 @@
 
   .pay-btn[disabled]
     cursor: not-allowed
-
 
 @media screen and (max-width: 600px)
   .universal-login-topup .top-up
@@ -557,4 +553,3 @@
 
   .universal-login-topup .pay-btn
     margin-top: 40px
-
