--- a/universal-login-wallet/src/ui/styles/components/_top-up.sass
+++ b/universal-login-wallet/src/ui/styles/components/_top-up.sass
@@ -298,14 +298,7 @@
       background: #fff
 
     .country-select-btn
-      display: flex
-      align-items: center
-      width: 100%
-      height: 30px
       padding: 0 0 0 12px
-      border: none
-      background: none
-      cursor: pointer
 
     .country-select-toggle
       position: relative
